--- a/starbuzz/blog.html
+++ b/starbuzz/blog.html
@@ -20,6 +20,14 @@
       />
     </header>
 
+    <ul>
+      <li><a href="index.html">Домой</a></li>
+      <li class="selected"><a href="blog.html">Блог</a></li>
+      <li><a href="">Изобретение</a></li>
+      <li><a href="">Рецепты</a></li>
+      <li><a href="">Адреса</a></li>
+    </ul>
+
     <div id="tableContainer">
       <div id="tableRow">
         <section id="drinks">
